--- a/opengl-playground/package.yaml
+++ b/opengl-playground/package.yaml
@@ -7,8 +7,8 @@ maintainer:          "sipr.jan@gmail.com"
 copyright:           "2018 Jan Sipr"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -20,10 +20,12 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/haskell-opengl#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- GLFW-b
-- OpenGL
-- StateVar
+  - base >= 4.7 && < 5
+  - GLFW-b
+  - OpenGL
+  - StateVar
+  - vector
+  - bytestring
 
 library:
   source-dirs: src
@@ -33,19 +35,19 @@ executables:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - opengl-playground
+      - opengl-playground
 
 tests:
   opengl-playground:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - opengl-playground
+      - opengl-playground
