--- a/opengl-playground/stack.yaml
+++ b/opengl-playground/stack.yaml
@@ -35,10 +35,14 @@ resolver: lts-11.13
 #  - wai
 packages:
 - .
+- ../../easytensor/easytensor
+- ../../easytensor/dimensions
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps: []
+#  - dimensions-1.0.1.1
+#  - easytensor-1.0.0.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
