--- a/opengl-playground/stack.yaml
+++ b/opengl-playground/stack.yaml
@@ -35,14 +35,15 @@ resolver: lts-11.13
 #  - wai
 packages:
 - .
-- ../../easytensor/easytensor
-- ../../easytensor/dimensions
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-extra-deps: []
-#  - dimensions-1.0.1.1
-#  - easytensor-1.0.0.1
+extra-deps:
+- git: https://github.com/achirkin/easytensor/
+  commit: f0918831e335c3122711ce9191198808708fac31
+  subdirs:
+  - easytensor
+  - dimensions
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
