--- a/opentelmetry-experiments/docker-compose.yml
+++ b/opentelmetry-experiments/docker-compose.yml
@@ -55,3 +55,5 @@ services:
     ports:
       - "5601:5601"
     restart: always
+    environment:
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
