--- a/opentelmetry-experiments/influxdb-grafana/docker-compose.yml
+++ b/opentelmetry-experiments/influxdb-grafana/docker-compose.yml
@@ -6,13 +6,17 @@ services:
       dockerfile: Dockerfile
       target: bash-log-gen
     depends_on:
-      opentelemetry-collector-start-check:
-        condition: service_healthy
+      - opentelemetry-collector
     restart: always
     logging:
       driver: fluentd
       options:
         fluentd-address: tcp://127.0.0.1:8006
+        # Allow time for otel-collector to spin up, then forward fluentd logs to the fluentforwarder receiver.
+        fluentd-async-connect: "true"
+        # Use nanosecond precision
+        fluentd-sub-second-precision: "true"
+
 
   opentelemetry-collector:
     image:  otel/opentelemetry-collector-contrib:0.54.0
@@ -24,19 +28,6 @@ services:
     ports:
       - "13133:13133"
       - "8006:8006"
-
-  opentelemetry-collector-start-check:
-    image:  bash:devel-alpine3.15
-    command: "sleep infinite"
-    depends_on:
-      - opentelemetry-collector
-    healthcheck:
-      # This healthcheck is so random...
-      test: "wget http://opentelemetry-collector:13133"
-      interval: 10s
-      timeout: 10s
-      retries: 5
-      start_period: 20s
 
   influxdb:
     image: influxdb:latest
