--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 opentelmetry-experiments/haskell-rust-opensearch/haskell-otel/dist-newstyle
 opentelmetry-experiments/rust-http-metrics/target
+html-themes/node_modules
+html-themes/style/tailwind-out.css
