--- a/html-themes/Trunk.toml
+++ b/html-themes/Trunk.toml
@@ -58,3 +58,7 @@ open = false
 # tls_cert_path = "self_signed_certs/cert.pem"
 # Additional headers to send. NOTE: header names must be valid HTTP headers.
 # headers = { "X-Foo" = "bar" }
+[[hooks]]
+stage = "pre_build"
+command = "sh"
+command_arguments = ["-c", "npx tailwindcss -i style/tailwind.css -o style/tailwind-out.css"]
